workspaces/DC Dev/DC Dev/src/objects/Leave__c.object
<CustomObject>
    <description>Leave needs to be approved by the manager of the employee.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Holds the name of the contact on leave.</description>
        <inlineHelpText>Select the name of the contact on leave.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leaves</relationshipLabel>
        <relationshipName>Leaves</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Holds the description of the leave.</description>
        <inlineHelpText>Provide the description of the leave.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End of the leave.</description>
        <inlineHelpText>End of the leave.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start of the leave.</description>
        <inlineHelpText>Start of the leave.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Leave</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LV-{0000}</displayFormat>
        <label>Leave Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>